// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferencesRelationMixin should not add reference methods if references empty 1`] = `
type TestResolverDTO {
  id: ID!
  stringField: String!
}

type Query {
  test: TestResolverDTO!
}
`;

exports[`ReferencesRelationMixin should set the field to nullable if set to true 1`] = `
type TestResolverDTO {
  id: ID!
  stringField: String!
  reference: TestRelationDTO
}

type TestRelationDTO {
  id: ID!
  testResolverId: String!
}

type Query {
  test: TestResolverDTO!
}
`;

exports[`ReferencesRelationMixin should use the add the reference if provided 1`] = `
type TestResolverDTO {
  id: ID!
  stringField: String!
  test: TestRelationDTO!
}

type TestRelationDTO {
  id: ID!
  testResolverId: String!
}

type Query {
  test: TestResolverDTO!
}
`;
